Backport to Java 8
That was easier than I thought it would go